@@ -11,7 +11,7 @@ public class StartUI {
         this.out = out;
     }
 
-    public void init(Input input, Tracker tracker, List<UserAction> actions) {
+    public void init(Input input, Store tracker, List<UserAction> actions) {
         boolean run = true;
         while (run) {
             showMenu(actions);
@@ -28,23 +28,27 @@ public class StartUI {
     private void showMenu(List<UserAction> actions) {
         out.println("Меню:");
         for (int index = 0; index < actions.size(); index++) {
-            out.println(index + ". " + actions.get(index).name());
+            int pm = index;
+            out.println(pm + ". " + actions.get(index).name());
         }
     }
 
     public static void main(String[] args) {
         Output output = new ConsoleOutput();
         Input input = new ValidateInput(output, new ConsoleInput());
-        Tracker tracker = new Tracker();
-        List<UserAction> actions =
-                Arrays.asList(new CreateAction(output),
-                        new CreateAction(output),
-                        new FindAllAction(output),
-                        new ReplaceAction(output),
-                        new DeleteAction(output),
-                        new FindByIdAction(output),
-                        new FindByNameAction(output),
-                        new ExitAction(output));
-        new StartUI(output).init(input, tracker, actions);
+        try (Store tracker = new SqlTracker()) {
+            List<UserAction> actions = List.of(
+                    new CreateAction(output),
+                    new FindAllAction(output),
+                    new ReplaceAction(output),
+                    new DeleteAction(output),
+                    new FindByIdAction(output),
+                    new FindByNameAction(output),
+                    new ExitAction(output)
+            );
+            new StartUI(output).init(input, tracker, actions);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
